adding CMS for bulk management of QandA :library:

--- a/qandaapis/buf.gen.yaml
+++ b/qandaapis/buf.gen.yaml
@@ -17,10 +17,10 @@ plugins:
   #   out: ../web/dist/swagger-ui/
   #   opt:
   #     - allow_repeated_fields_in_body=true
-  # - name: ts 
-  #   out: ../web/src/lib
-  #   opt: grpc_js
-  #   strategy: all
+  - name: ts 
+    out: ../cms/src/lib
+    opt: grpc_js
+    strategy: all
   # - name: js
   #   out: ../web/src/lib
   #   opt: import_style=commonjs,binary
