--- a/cms/package.json
+++ b/cms/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "dotenv": "^16.0.0",
     "firebase": "^9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
